@@ -569,6 +569,9 @@ bdb_initialize(
 		LDAP_CONTROL_SUBENTRIES,
 #endif
  		LDAP_CONTROL_VALUESRETURNFILTER,
+#ifdef LDAP_CONTROL_X_PERMISSIVE_MODIFY
+		LDAP_CONTROL_X_PERMISSIVE_MODIFY,
+#endif
 		NULL
 	};
 
