@@ -6,6 +6,7 @@ OpenLDAP 2.2.20 Engineering
 	Fixed slapd sl_realloc memory overrun (ITS#3420, #3404, #3296)
 	Fixed slapd syncrepl bugs (ITS#3423, #3425, #3443, #3448)
 	Fixed back-bdb locks in backend_group (ITS#3263, #3365)
+	Fixed back-bdb/back-hdb listing of permissive control (ITS#3453)
 	Fixed back-ldap failed connection retry (ITS#3217)
 	Fixed back-sql segfault when logging and delete_rule is NULL (ITS#3407)
 	Build Environment
